# django-formdefaults

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/superpowers/plans/: 2026-05-09-django-formdefaults-v0.2.md
docs/superpowers/specs/: 2026-05-09-django-formdefaults-design.md
example_project/: runsite.toml
example_project/demo/: forms.py  urls.py  views.py
example_project/demo/locale/pl/LC_MESSAGES/: django.mo  django.po
example_project/demo/templates/: base.html
example_project/demo/templates/demo/: report.html  search.html  settings.html
example_project/example_project/: settings.py  urls.py
src/formdefaults/: __init__.py  _autosnap_backfill.py  admin.py  apps.py  core.py  forms.py  helpers.py  models.py  permissions.py  registry.py  signals.py  urls.py  views.py
src/formdefaults/locale/pl/LC_MESSAGES/: django.mo  django.po
src/formdefaults/management/commands/: dedupe_formdefaults.py
src/formdefaults/migrations/: 0001_initial.py  0002_django32.py  0003_formrepresentation_pre_registered.py  0004_unique_field_user.py  0005_unique_field_system.py  0006_formfielddefaultvalue_is_auto_snapshot.py  0007_backfill_is_auto_snapshot.py
src/formdefaults/static/formdefaults/: modal.css  modal.js
src/formdefaults/templates/formdefaults/: _button.html  _modal_fragment.html  _user_edit_form.html
src/formdefaults/templatetags/: formdefaults.py
tests/: conftest.py  example_settings.py  settings.py  test_core.py  test_example_project.py  test_helpers.py  test_models.py  test_register.py  test_signals.py  test_system_edit_view.py  test_user_edit_view.py  urls.py
